First 10 questions complete

--- a/w3resource SQL Practice/Questions 1-10.ipynb
+++ b/w3resource SQL Practice/Questions 1-10.ipynb
@@ -16,7 +16,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## Question 1\r\n",
+                "### Question 1\r\n",
                 "From the following table write a query in SQL to retrieve all rows and columns from the employee table in the Adventureworks database. Sort the result set in ascending order on jobtitle.\r\n",
                 "\r\n",
                 "Sample table: humanresources.employee"
@@ -45,7 +45,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## Question 2\r\n",
+                "### Question 2\r\n",
                 "From the following table write a query in SQL to retrieve all rows and columns from the employee table using table aliasing in the Adventureworks database. Sort the output in ascending order on lastname.\r\n",
                 "\r\n",
                 "Sample table: person.person"
@@ -73,7 +73,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## Question 3\r\n",
+                "### Question 3\r\n",
                 "From the following table write a query in SQL to return all rows and a subset of the columns (FirstName, LastName, businessentityid) from the person table in the AdventureWorks database. The third column heading is renamed to Employee_id. Arranged the output in ascending order by lastname.\r\n",
                 "\r\n",
                 "Sample table: person.person"
@@ -87,13 +87,231 @@
         {
             "cell_type": "code",
             "source": [
-                "SELECT FirstName, LastName, BusinessEntityID AS Employee_id\r\n",
+                "SELECT FirstName\r\n",
+                "    , LastName\r\n",
+                "    , BusinessEntityID AS Employee_id\r\n",
                 "FROM Person.Person\r\n",
                 "ORDER BY LastName;"
             ],
             "metadata": {
                 "language": "sql",
                 "azdata_cell_guid": "ce5b864f-12e9-4070-86db-10e8c30e94f7"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### Question 4\n",
+                "From the following table write a query in SQL to return only the rows for product that have a sellstartdate that is not NULL and a productline of 'T'. Return productid, productnumber, and name. Arranged the output in ascending order on name.\n",
+                "\n",
+                "Sample table: production.product"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "7935b77d-0fe1-47a5-aea2-87d561ef1e61"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT ProductID\r\n",
+                "    , ProductNumber\r\n",
+                "    , Name\r\n",
+                "FROM Production.Product\r\n",
+                "WHERE SellStartDate IS NOT NULL\r\n",
+                "    AND ProductLine = 'T'\r\n",
+                "ORDER BY Name;"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "5045c59f-121b-4a76-a863-9e457d8ce877",
+                "language": "sql"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### Question 5\r\n",
+                "From the following table write a query in SQL to return all rows from the salesorderheader table in Adventureworks database and calculate the percentage of tax on the subtotal have decided. Return salesorderid, customerid, orderdate, subtotal, percentage of tax column. Arranged the result set in ascending order on subtotal.\r\n",
+                "\r\n",
+                "Sample table: sales.salesorderheader"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "41634ff6-964f-43aa-a28d-d4c62d9f45fc"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT SalesOrderID\r\n",
+                "    , CustomerID\r\n",
+                "    , OrderDate\r\n",
+                "    , SubTotal\r\n",
+                "    , (TaxAmt / SubTotal) * 100 AS TaxPercent\r\n",
+                "FROM Sales.SalesOrderHeader\r\n",
+                "ORDER BY SubTotal DESC;"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "e28347bf-e4ce-4dd7-abc5-d81648d9af22"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### Question 6\r\n",
+                "From the following table write a query in SQL to create a list of unique jobtitles in the employee table in Adventureworks database. Return jobtitle column and arranged the resultset in ascending order.\r\n",
+                "\r\n",
+                "Sample table: humanresources.employee"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "b334c1e7-e35d-430a-af87-b0b58dec4fe2"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT DISTINCT JobTitle\r\n",
+                "FROM HumanResources.Employee\r\n",
+                "ORDER BY JobTitle;"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "f7186c0d-0522-4bdc-b356-6b8d65be3eb1"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### Question 7\r\n",
+                "From the following table write a query in SQL to calculate the total freight paid by each customer. Return customerid and total freight. Sort the output in ascending order on customerid.\r\n",
+                "\r\n",
+                "Sample table: sales.salesorderheader"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "fe2cb772-ff93-4ae4-ad78-f45c2b7c2e4a"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT CustomerID\r\n",
+                "    , SUM(Freight) AS TotalFreight\r\n",
+                "FROM Sales.SalesOrderHeader\r\n",
+                "GROUP BY CustomerID\r\n",
+                "ORDER BY CustomerID;"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "de83b47a-56a1-44e9-b9ec-b22727d19b02",
+                "tags": []
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### Question 8\r\n",
+                "From the following table write a query in SQL to find the average and the sum of the subtotal for every customer. Return customerid, average and sum of the subtotal. Grouped the result on customerid and salespersonid. Sort the result on customerid column in descending order.\r\n",
+                "\r\n",
+                "Sample table: sales.salesorderheader"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "879ea46b-1005-46c2-be12-8301de6aa597"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT CustomerID\r\n",
+                "    , SalesPersonID\r\n",
+                "    , AVG(SubTotal) AS AvgSubTotal\r\n",
+                "    , SUM(SubTotal) AS SumSubTotal\r\n",
+                "FROM Sales.SalesOrderHeader\r\n",
+                "GROUP BY CustomerID\r\n",
+                "    , SalesPersonID\r\n",
+                "ORDER BY CustomerID DESC;"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "0dcc8313-09bc-44e5-afb3-b6787c9e587d"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### Question 9\r\n",
+                "From the following table write a query in SQL to retrieve total quantity of each productid which are in shelf of 'A' or 'C' or 'H'. Filter the results for sum quantity is more than 500. Return productid and sum of the quantity. Sort the results according to the productid in ascending order.\r\n",
+                "\r\n",
+                "Sample table: production.productinventory"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "9c9c6649-aa12-422f-9767-527037692d10"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT ProductID\r\n",
+                "    , SUM(Quantity) AS TotalQuantity\r\n",
+                "FROM Production.ProductInventory\r\n",
+                "WHERE Shelf IN ('A', 'C', 'H')\r\n",
+                "GROUP BY ProductID\r\n",
+                "HAVING SUM(Quantity) > 500\r\n",
+                "ORDER BY ProductID;"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "f551d2d2-63b7-4d8e-b64c-e17244464d08"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### Question 10\r\n",
+                "From the following table write a query in SQL to find the total quantity for a group of locationid multiplied by 10.\r\n",
+                "\r\n",
+                "Sample table: production.productinventory"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "bbf8574b-fe2b-4edb-b2d3-cee1e0be41c0"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT SUM(Quantity) AS TotalQuantity\r\n",
+                "FROM Production.ProductInventory\r\n",
+                "GROUP BY (LocationID * 10);"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "2ac197a4-c74f-4eca-9786-04bc54405288",
+                "tags": []
             },
             "outputs": [],
             "execution_count": null
