Adding more questions

--- a/w3resource SQL Practice/Questions 1-20.ipynb
+++ b/w3resource SQL Practice/Questions 1-20.ipynb
@@ -40,7 +40,7 @@
                 "tags": []
             },
             "outputs": [],
-            "execution_count": null
+            "execution_count": 1
         },
         {
             "cell_type": "markdown",
@@ -312,6 +312,256 @@
                 "language": "sql",
                 "azdata_cell_guid": "2ac197a4-c74f-4eca-9786-04bc54405288",
                 "tags": []
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### Question 11\r\n",
+                "From the following tables write a query in SQL to find the persons whose last name starts with letter 'L'. Return BusinessEntityID, FirstName, LastName, and PhoneNumber. Sort the result on lastname and firstname.\r\n",
+                "\r\n",
+                "Sample table: Person.PersonPhone"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "7c06f676-2f2b-46e1-866a-f502f9d0b36e"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "76a6244e-32fe-4e2a-add4-ad20ec221e82",
+                "language": "sql"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### Question 12\r\n",
+                "From the following table write a query in SQL to find the sum of subtotal column. Group the sum on distinct salespersonid and customerid. Rolls up the results into subtotal and running total. Return salespersonid, customerid and sum of subtotal column i.e. sum_subtotal.\r\n",
+                "\r\n",
+                "Sample table: sales.salesorderheader"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "703f7c98-4013-40a6-bfb8-8ecc7f25c0e3"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "161e77be-b909-46ba-bac9-6e9924145e67",
+                "language": "sql"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### Question 13\r\n",
+                "From the following table write a query in SQL to find the sum of the quantity of all combination of group of distinct locationid and shelf column. Return locationid, shelf and sum of quantity as TotalQuantity.\r\n",
+                "\r\n",
+                "Sample table: production.productinventory"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "9c084569-5942-4416-9a4f-20a0f9e42e53"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "87d9cdd0-3e06-4340-856b-a52851ee2862",
+                "language": "sql"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### Question 14\r\n",
+                "From the following table write a query in SQL to find the sum of the quantity with subtotal for each locationid. Group the results for all combination of distinct locationid and shelf column. Rolls up the results into subtotal and running total. Return locationid, shelf and sum of quantity as TotalQuantity.\r\n",
+                "\r\n",
+                "Sample table: production.productinventory"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "05f9f19d-a536-4662-9294-5bb865644338"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "f0b3ea68-d698-4af7-9a48-e071b12ecbb5",
+                "language": "sql"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### Question 15\r\n",
+                "From the following table write a query in SQL to find the total quantity for each locationid and calculate the grand-total for all locations. Return locationid and total quantity. Group the results on locationid.\r\n",
+                "\r\n",
+                "Sample table: production.productinventory"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "ce434456-5a45-4078-b3ef-f56d66ba5424"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "aa544610-20c5-4c50-aec1-651f3350fd52",
+                "language": "sql"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### Question 16\r\n",
+                "From the following table write a query in SQL to retrieve the number of employees for each City. Return city and number of employees. Sort the result in ascending order on city.\r\n",
+                "\r\n",
+                "Sample table: Person.BusinessEntityAddress"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "53fd3b46-de56-4d57-ae95-db6f99a3fbcb"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "23cf5dd7-a05d-4f26-ab47-3af21fa96afe",
+                "language": "sql"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### Question 17\r\n",
+                "From the following table write a query in SQL to retrieve the total sales for each year. Return the year part of order date and total due amount. Sort the result in ascending order on year part of order date.\r\n",
+                "\r\n",
+                "Sample table: Sales.SalesOrderHeader"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "ea806d55-f76f-4266-aa56-e1c556db63be"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "71a0bc43-b89e-4a8d-8197-43b367213e99",
+                "language": "sql"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### Question 18\r\n",
+                "From the following table write a query in SQL to retrieve the total sales for each year. Filter the result set for those orders where order year is on or before 2016. Return the year part of orderdate and total due amount. Sort the result in ascending order on year part of order date.\r\n",
+                "\r\n",
+                "Sample table: Sales.SalesOrderHeader"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "f378004e-2e9c-4f12-a75e-f4e8d78a9a6f"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "bddbb6fb-6698-4e4c-b0f4-9eb6f19ff960",
+                "language": "sql"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### Question 19\r\n",
+                "From the following table write a query in SQL to find the contacts who are designated as a manager in various departments. Returns ContactTypeID, name. Sort the result set in descending order.\r\n",
+                "\r\n",
+                "Sample table: Person.ContactType"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "d4767838-77dc-4dda-982e-7ad5147ec38d"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "dc08c900-7a53-4a53-830a-0600ba13a265",
+                "language": "sql"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### Question 20\r\n",
+                "From the following tables write a query in SQL to make a list of contacts who are designated as 'Purchasing Manager'. Return BusinessEntityID, LastName, and FirstName columns. Sort the result set in ascending order of LastName, and FirstName.\r\n",
+                "\r\n",
+                "Sample table: Person.BusinessEntityContact"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "94133ab4-56d8-4819-9271-13a1ecdcde20"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "6b6559a8-d3ec-4c01-a14a-857e30e9207e",
+                "language": "sql"
             },
             "outputs": [],
             "execution_count": null
