--- a/w3resource SQL Practice/Questions 1-20.ipynb
+++ b/w3resource SQL Practice/Questions 1-20.ipynb
@@ -484,7 +484,13 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "SELECT A.city\r\n",
+                "    , COUNT(BA.BusinessEntityID) AS NumberOfEmployees\r\n",
+                "FROM Person.BusinessEntityAddress BA\r\n",
+                "JOIN Person.Address AS A\r\n",
+                "    ON BA.AddressID = A.AddressID\r\n",
+                "GROUP BY A.City\r\n",
+                "ORDER BY A.City;"
             ],
             "metadata": {
                 "azdata_cell_guid": "23cf5dd7-a05d-4f26-ab47-3af21fa96afe",
@@ -509,7 +515,11 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "SELECT YEAR(OrderDate) AS Year\r\n",
+                "    , SUM(TotalDue) AS TotalDueAmount\r\n",
+                "FROM Sales.SalesOrderHeader\r\n",
+                "GROUP BY YEAR(OrderDate)\r\n",
+                "ORDER BY YEAR(OrderDate);"
             ],
             "metadata": {
                 "azdata_cell_guid": "71a0bc43-b89e-4a8d-8197-43b367213e99",
@@ -534,7 +544,12 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "SELECT DATEPART(YEAR, OrderDate) AS Year\r\n",
+                "    , SUM(TotalDue) TotalDueAmount\r\n",
+                "FROM Sales.SalesOrderHeader\r\n",
+                "WHERE DATEPART(YEAR, OrderDate) <= 2016\r\n",
+                "GROUP BY DATEPART(YEAR, OrderDate)\r\n",
+                "ORDER BY DATEPART(YEAR, OrderDate);"
             ],
             "metadata": {
                 "azdata_cell_guid": "bddbb6fb-6698-4e4c-b0f4-9eb6f19ff960",
@@ -559,11 +574,16 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "SELECT ContactTypeID\r\n",
+                "    , Name\r\n",
+                "FROM Person.ContactType\r\n",
+                "WHERE Name LIKE '%Manager%'\r\n",
+                "ORDER BY ContactTypeID DESC;"
             ],
             "metadata": {
                 "azdata_cell_guid": "dc08c900-7a53-4a53-830a-0600ba13a265",
-                "language": "sql"
+                "language": "sql",
+                "tags": []
             },
             "outputs": [],
             "execution_count": null
@@ -584,7 +604,17 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "SELECT BEC.BusinessEntityID\r\n",
+                "    , P.LastName\r\n",
+                "    , P.FirstName\r\n",
+                "FROM Person.BusinessEntityContact AS BEC\r\n",
+                "INNER JOIN Person.ContactType AS CT\r\n",
+                "    ON BEC.ContactTypeID = CT.ContactTypeID\r\n",
+                "INNER JOIN Person.Person AS P\r\n",
+                "    ON BEC.PersonID = P.BusinessEntityID\r\n",
+                "WHERE CT.Name = 'Purchasing Manager'\r\n",
+                "ORDER BY P.LastName\r\n",
+                "    , P.FirstName"
             ],
             "metadata": {
                 "azdata_cell_guid": "6b6559a8-d3ec-4c01-a14a-857e30e9207e",
