--- a/w3resource-SQL-Practice/SQL_Exercises_&_Solutions.ipynb
+++ b/w3resource-SQL-Practice/SQL_Exercises_&_Solutions.ipynb
@@ -16,14 +16,16 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## SQL Exercises & Solutions\n",
+                "## [SQL Exercises & Solutions](w3resource-SQL-Practice/SQL_Exercises_&_Solutions.ipynb)\n",
+                "25 out of 81 (Excersises can be found on [w3resource.com](https://www.w3resource.com/sql-exercises/adventureworks/adventureworks-exercises.php))\n",
                 "\n",
-                "Taken from [w3resource](https://www.w3resource.com/sql-exercises/adventureworks/adventureworks-exercises.php)"
+                "![30](https://progress-bar.dev/30)"
             ],
             "metadata": {
                 "language": "sql",
                 "azdata_cell_guid": "be97bb02-bf8c-48e7-ba37-f97616b6f04f"
-            }
+            },
+            "attachments": {}
         },
         {
             "cell_type": "markdown",
@@ -912,7 +914,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 2,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -1147,32 +1148,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>SalesOrderID</th><th>ProductID</th><th>OrderQty</th><th>CountOrderQty</th><th>SumOrderQty</th><th>AvgOrderQty</th><th>MinOrderQty</th><th>MaxOrderQty</th></tr>",
-                            "<tr><td>43659</td><td>776</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr>",
-                            "<tr><td>43659</td><td>777</td><td>3</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr>",
-                            "<tr><td>43659</td><td>778</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr>",
-                            "<tr><td>43659</td><td>771</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr>",
-                            "<tr><td>43659</td><td>772</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr>",
-                            "<tr><td>43659</td><td>773</td><td>2</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr>",
-                            "<tr><td>43659</td><td>774</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr>",
-                            "<tr><td>43659</td><td>714</td><td>3</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr>",
-                            "<tr><td>43659</td><td>716</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr>",
-                            "<tr><td>43659</td><td>709</td><td>6</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr>",
-                            "<tr><td>43659</td><td>712</td><td>2</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr>",
-                            "<tr><td>43659</td><td>711</td><td>4</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr>",
-                            "<tr><td>43664</td><td>772</td><td>1</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr>",
-                            "<tr><td>43664</td><td>775</td><td>4</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr>",
-                            "<tr><td>43664</td><td>714</td><td>1</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr>",
-                            "<tr><td>43664</td><td>716</td><td>1</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr>",
-                            "<tr><td>43664</td><td>777</td><td>2</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr>",
-                            "<tr><td>43664</td><td>771</td><td>3</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr>",
-                            "<tr><td>43664</td><td>773</td><td>1</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr>",
-                            "<tr><td>43664</td><td>778</td><td>1</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>SalesOrderID</th><th>ProductID</th><th>OrderQty</th><th>CountOrderQty</th><th>SumOrderQty</th><th>AvgOrderQty</th><th>MinOrderQty</th><th>MaxOrderQty</th></tr><tr><td>43659</td><td>776</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>777</td><td>3</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>778</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>771</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>772</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>773</td><td>2</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>774</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>714</td><td>3</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>716</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>709</td><td>6</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>712</td><td>2</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>711</td><td>4</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43664</td><td>772</td><td>1</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr><tr><td>43664</td><td>775</td><td>4</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr><tr><td>43664</td><td>714</td><td>1</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr><tr><td>43664</td><td>716</td><td>1</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr><tr><td>43664</td><td>777</td><td>2</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr><tr><td>43664</td><td>771</td><td>3</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr><tr><td>43664</td><td>773</td><td>1</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr><tr><td>43664</td><td>778</td><td>1</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 2
