--- a/w3resource-SQL-Practice/SQL_Exercises_&_Solutions.ipynb
+++ b/w3resource-SQL-Practice/SQL_Exercises_&_Solutions.ipynb
@@ -17,7 +17,7 @@
             "cell_type": "markdown",
             "source": [
                 "## [SQL Exercises & Solutions](w3resource-SQL-Practice/SQL_Exercises_&_Solutions.ipynb)\n",
-                "25 out of 81 (Excersises can be found on [w3resource.com](https://www.w3resource.com/sql-exercises/adventureworks/adventureworks-exercises.php))\n",
+                "25 Excersises out of 81 (can be found on [w3resource.com](https://www.w3resource.com/sql-exercises/adventureworks/adventureworks-exercises.php))\n",
                 "\n",
                 "![30](https://progress-bar.dev/30)"
             ],
