--- a/w3resource-SQL-Practice/SQL_Exercises_&_Solutions.ipynb
+++ b/w3resource-SQL-Practice/SQL_Exercises_&_Solutions.ipynb
@@ -16,7 +16,8 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## [SQL Exercises & Solutions](w3resource-SQL-Practice/SQL_Exercises_&_Solutions.ipynb)\n",
+                "## [SQL Exercises & Solutions]()\n",
+                "\n",
                 "25 Excersises out of 81 (can be found on [w3resource.com](https://www.w3resource.com/sql-exercises/adventureworks/adventureworks-exercises.php))\n",
                 "\n",
                 "![30](https://progress-bar.dev/30)"
@@ -897,263 +898,8 @@
                 "azdata_cell_guid": "552216ff-6803-449d-ab0a-7eed7a145a36",
                 "language": "sql"
             },
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "(20 rows affected)"
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.014"
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "execute_result",
-                    "execution_count": 2,
-                    "data": {
-                        "application/vnd.dataresource+json": {
-                            "schema": {
-                                "fields": [
-                                    {
-                                        "name": "SalesOrderID"
-                                    },
-                                    {
-                                        "name": "ProductID"
-                                    },
-                                    {
-                                        "name": "OrderQty"
-                                    },
-                                    {
-                                        "name": "CountOrderQty"
-                                    },
-                                    {
-                                        "name": "SumOrderQty"
-                                    },
-                                    {
-                                        "name": "AvgOrderQty"
-                                    },
-                                    {
-                                        "name": "MinOrderQty"
-                                    },
-                                    {
-                                        "name": "MaxOrderQty"
-                                    }
-                                ]
-                            },
-                            "data": [
-                                {
-                                    "0": "43659",
-                                    "1": "776",
-                                    "2": "1",
-                                    "3": "12",
-                                    "4": "26",
-                                    "5": "2",
-                                    "6": "1",
-                                    "7": "6"
-                                },
-                                {
-                                    "0": "43659",
-                                    "1": "777",
-                                    "2": "3",
-                                    "3": "12",
-                                    "4": "26",
-                                    "5": "2",
-                                    "6": "1",
-                                    "7": "6"
-                                },
-                                {
-                                    "0": "43659",
-                                    "1": "778",
-                                    "2": "1",
-                                    "3": "12",
-                                    "4": "26",
-                                    "5": "2",
-                                    "6": "1",
-                                    "7": "6"
-                                },
-                                {
-                                    "0": "43659",
-                                    "1": "771",
-                                    "2": "1",
-                                    "3": "12",
-                                    "4": "26",
-                                    "5": "2",
-                                    "6": "1",
-                                    "7": "6"
-                                },
-                                {
-                                    "0": "43659",
-                                    "1": "772",
-                                    "2": "1",
-                                    "3": "12",
-                                    "4": "26",
-                                    "5": "2",
-                                    "6": "1",
-                                    "7": "6"
-                                },
-                                {
-                                    "0": "43659",
-                                    "1": "773",
-                                    "2": "2",
-                                    "3": "12",
-                                    "4": "26",
-                                    "5": "2",
-                                    "6": "1",
-                                    "7": "6"
-                                },
-                                {
-                                    "0": "43659",
-                                    "1": "774",
-                                    "2": "1",
-                                    "3": "12",
-                                    "4": "26",
-                                    "5": "2",
-                                    "6": "1",
-                                    "7": "6"
-                                },
-                                {
-                                    "0": "43659",
-                                    "1": "714",
-                                    "2": "3",
-                                    "3": "12",
-                                    "4": "26",
-                                    "5": "2",
-                                    "6": "1",
-                                    "7": "6"
-                                },
-                                {
-                                    "0": "43659",
-                                    "1": "716",
-                                    "2": "1",
-                                    "3": "12",
-                                    "4": "26",
-                                    "5": "2",
-                                    "6": "1",
-                                    "7": "6"
-                                },
-                                {
-                                    "0": "43659",
-                                    "1": "709",
-                                    "2": "6",
-                                    "3": "12",
-                                    "4": "26",
-                                    "5": "2",
-                                    "6": "1",
-                                    "7": "6"
-                                },
-                                {
-                                    "0": "43659",
-                                    "1": "712",
-                                    "2": "2",
-                                    "3": "12",
-                                    "4": "26",
-                                    "5": "2",
-                                    "6": "1",
-                                    "7": "6"
-                                },
-                                {
-                                    "0": "43659",
-                                    "1": "711",
-                                    "2": "4",
-                                    "3": "12",
-                                    "4": "26",
-                                    "5": "2",
-                                    "6": "1",
-                                    "7": "6"
-                                },
-                                {
-                                    "0": "43664",
-                                    "1": "772",
-                                    "2": "1",
-                                    "3": "8",
-                                    "4": "14",
-                                    "5": "1",
-                                    "6": "1",
-                                    "7": "4"
-                                },
-                                {
-                                    "0": "43664",
-                                    "1": "775",
-                                    "2": "4",
-                                    "3": "8",
-                                    "4": "14",
-                                    "5": "1",
-                                    "6": "1",
-                                    "7": "4"
-                                },
-                                {
-                                    "0": "43664",
-                                    "1": "714",
-                                    "2": "1",
-                                    "3": "8",
-                                    "4": "14",
-                                    "5": "1",
-                                    "6": "1",
-                                    "7": "4"
-                                },
-                                {
-                                    "0": "43664",
-                                    "1": "716",
-                                    "2": "1",
-                                    "3": "8",
-                                    "4": "14",
-                                    "5": "1",
-                                    "6": "1",
-                                    "7": "4"
-                                },
-                                {
-                                    "0": "43664",
-                                    "1": "777",
-                                    "2": "2",
-                                    "3": "8",
-                                    "4": "14",
-                                    "5": "1",
-                                    "6": "1",
-                                    "7": "4"
-                                },
-                                {
-                                    "0": "43664",
-                                    "1": "771",
-                                    "2": "3",
-                                    "3": "8",
-                                    "4": "14",
-                                    "5": "1",
-                                    "6": "1",
-                                    "7": "4"
-                                },
-                                {
-                                    "0": "43664",
-                                    "1": "773",
-                                    "2": "1",
-                                    "3": "8",
-                                    "4": "14",
-                                    "5": "1",
-                                    "6": "1",
-                                    "7": "4"
-                                },
-                                {
-                                    "0": "43664",
-                                    "1": "778",
-                                    "2": "1",
-                                    "3": "8",
-                                    "4": "14",
-                                    "5": "1",
-                                    "6": "1",
-                                    "7": "4"
-                                }
-                            ]
-                        },
-                        "text/html": "<table><tr><th>SalesOrderID</th><th>ProductID</th><th>OrderQty</th><th>CountOrderQty</th><th>SumOrderQty</th><th>AvgOrderQty</th><th>MinOrderQty</th><th>MaxOrderQty</th></tr><tr><td>43659</td><td>776</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>777</td><td>3</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>778</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>771</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>772</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>773</td><td>2</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>774</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>714</td><td>3</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>716</td><td>1</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>709</td><td>6</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>712</td><td>2</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43659</td><td>711</td><td>4</td><td>12</td><td>26</td><td>2</td><td>1</td><td>6</td></tr><tr><td>43664</td><td>772</td><td>1</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr><tr><td>43664</td><td>775</td><td>4</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr><tr><td>43664</td><td>714</td><td>1</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr><tr><td>43664</td><td>716</td><td>1</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr><tr><td>43664</td><td>777</td><td>2</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr><tr><td>43664</td><td>771</td><td>3</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr><tr><td>43664</td><td>773</td><td>1</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr><tr><td>43664</td><td>778</td><td>1</td><td>8</td><td>14</td><td>1</td><td>1</td><td>4</td></tr></table>"
-                    },
-                    "metadata": {}
-                }
-            ],
-            "execution_count": 2
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
