--- a/w3resource-SQL-Practice/SQL_Exercises_&_Solutions.ipynb
+++ b/w3resource-SQL-Practice/SQL_Exercises_&_Solutions.ipynb
@@ -920,14 +920,129 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "SELECT SalesOrderID\r\n",
+                "    , ProductID\r\n",
+                "    , OrderQty\r\n",
+                "    , SUM(OrderQty) OVER (ORDER BY SalesOrderID, ProductID) AS Total\r\n",
+                "    , AVG(OrderQty) OVER (PARTITION BY SalesOrderID ORDER BY SalesOrderID, ProductID) AS Average\r\n",
+                "    , COUNT(OrderQty) OVER (ORDER BY SalesOrderID, ProductID ROWS BETWEEN UNBOUNDED PRECEDING AND 1 FOLLOWING) AS Count\r\n",
+                "FROM Sales.SalesOrderDetail\r\n",
+                "WHERE SalesOrderID IN (43659, 43664)\r\n",
+                "    AND ProductID LIKE '71%'"
             ],
             "metadata": {
                 "azdata_cell_guid": "74bef362-dd0a-4b44-ace4-5a59db16f8e1",
                 "language": "sql"
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(6 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.066"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 21,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "SalesOrderID"
+                                    },
+                                    {
+                                        "name": "ProductID"
+                                    },
+                                    {
+                                        "name": "OrderQty"
+                                    },
+                                    {
+                                        "name": "Total"
+                                    },
+                                    {
+                                        "name": "Average"
+                                    },
+                                    {
+                                        "name": "Count"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "0": "43659",
+                                    "1": "711",
+                                    "2": "4",
+                                    "3": "4",
+                                    "4": "4",
+                                    "5": "2"
+                                },
+                                {
+                                    "0": "43659",
+                                    "1": "712",
+                                    "2": "2",
+                                    "3": "6",
+                                    "4": "3",
+                                    "5": "3"
+                                },
+                                {
+                                    "0": "43659",
+                                    "1": "714",
+                                    "2": "3",
+                                    "3": "9",
+                                    "4": "3",
+                                    "5": "4"
+                                },
+                                {
+                                    "0": "43659",
+                                    "1": "716",
+                                    "2": "1",
+                                    "3": "10",
+                                    "4": "2",
+                                    "5": "5"
+                                },
+                                {
+                                    "0": "43664",
+                                    "1": "714",
+                                    "2": "1",
+                                    "3": "11",
+                                    "4": "1",
+                                    "5": "6"
+                                },
+                                {
+                                    "0": "43664",
+                                    "1": "716",
+                                    "2": "1",
+                                    "3": "12",
+                                    "4": "1",
+                                    "5": "6"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>SalesOrderID</th><th>ProductID</th><th>OrderQty</th><th>Total</th><th>Average</th><th>Count</th></tr>",
+                            "<tr><td>43659</td><td>711</td><td>4</td><td>4</td><td>4</td><td>2</td></tr>",
+                            "<tr><td>43659</td><td>712</td><td>2</td><td>6</td><td>3</td><td>3</td></tr>",
+                            "<tr><td>43659</td><td>714</td><td>3</td><td>9</td><td>3</td><td>4</td></tr>",
+                            "<tr><td>43659</td><td>716</td><td>1</td><td>10</td><td>2</td><td>5</td></tr>",
+                            "<tr><td>43664</td><td>714</td><td>1</td><td>11</td><td>1</td><td>6</td></tr>",
+                            "<tr><td>43664</td><td>716</td><td>1</td><td>12</td><td>1</td><td>6</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 21
         },
         {
             "cell_type": "markdown",
